--- a/SuperHeroes/Views/Heroes/Edit.cshtml
+++ b/SuperHeroes/Views/Heroes/Edit.cshtml
@@ -1,22 +1,22 @@
 ﻿@model SuperHeroes.Models.Hero
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Create</h1>
+<h1>Edit</h1>
 
 <h4>Hero</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="id" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
-
             </div>
             <div class="form-group">
                 <label asp-for="AlterEgo" class="control-label"></label>
@@ -39,7 +39,7 @@
                 <span asp-validation-for="CatchPhrase" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
