--- a/SuperHeroes/Views/Home/Index.cshtml
+++ b/SuperHeroes/Views/Home/Index.cshtml
@@ -3,6 +3,11 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to Super Hero Database</h1>
+    
+</div>
+<div class="justify-content-md-center">
+
+    <div style="width:100%;height:0;padding-bottom:56%;position:relative;"><iframe src="https://giphy.com/embed/PmQPaIbgjgW6Q" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/silver-fang-PmQPaIbgjgW6Q">via GIPHY</a></p>
+
 </div>
