MVP status has been reached, anchors have now been disguised as buttons for cleaner look, validation occcurs at in creation, must have name, all links have been color coded depending on action

--- a/SuperHeroes/Views/Heroes/Delete.cshtml
+++ b/SuperHeroes/Views/Heroes/Delete.cshtml
@@ -45,7 +45,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete"  class="btn btn-sm btn-outline-danger"/> |
+        <a asp-action="Index" type="button" class="btn btn-sm btn-outline-info">Back to List</a>
     </form>
 </div>
