--- a/SuperHeroes/Views/Shared/_Layout.cshtml
+++ b/SuperHeroes/Views/Shared/_Layout.cshtml
@@ -20,10 +20,10 @@
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Heroes" asp-action="Index">Superheroes</a>
+                            <a class="nav-link" asp-area="" asp-controller="Heroes" asp-action="Index">Database</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Heroes" asp-action="Create">New Hero</a>
+                            <a class="nav-link" asp-area="" asp-controller="Heroes" asp-action="Create">Add Hero</a>
                         </li>
                     </ul>
                 </div>
