--- a/SuperHeroes/Views/Heroes/Create.cshtml
+++ b/SuperHeroes/Views/Heroes/Create.cshtml
@@ -39,14 +39,14 @@
                 <span asp-validation-for="CatchPhrase" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-sm btn-outline-success" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" type="button" class="btn btn-sm btn-outline-info">Back to List</a>
 </div>
 
 @section Scripts {
