--- a/SuperHeroes/Views/Heroes/Details.cshtml
+++ b/SuperHeroes/Views/Heroes/Details.cshtml
@@ -43,6 +43,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.id" type="button" class="btn btn-sm btn-outline-warning">Edit</a> |
+    <a asp-action="Index" type="button" class="btn btn-sm btn-outline-info">Back to List</a>
 </div>
